<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC6CpV51hO5WmU5RjvYKsh-D4T74lTsYxE</string>
    <string name="app">Sekar Pinter</string>
    <string name="app_name">SEKAR PINTER</string>
    <string name="companyName">Sekar Pinter</string>
    <string name="buildName">sekar</string>
    <string name="loading">Harap Menunggu</string>
    <string name="requesting">Requesting</string>
    <string name="aboutVersion">Sekar Pinter Mobile Versi 1.0.7</string>
    <string name="aboutCopyright">©2023 Sekar Pinter</string>
    <string name="titleDana">Masukkan pendanaan yang anda inginkan</string>
    <string name="pilihAgunan">Pilih Agunan</string>
    <string name="pilihTahun">Pilih Tahun</string>
    <string name="pilihArea">Pilih Area</string>
    <string name="pilihKota">Pilih Kota</string>
    <string name="titleJumlahBiaya">Jumlah Pembiayaan</string>
    <string name="titleHarga">Harga</string>
    <string name="titleUangMuka">Uang Muka</string>
    <string name="titleTahunKendaraan">Tahun Kendaraan</string>
    <string name="titleAreaTT">Area Tempat Tinggal</string>
    <string name="titleKota">Kota Terdekat</string>
    <string name="titleSummaryKredit">Summary Kredit</string>
    <string name="titleDataPribadi">Data Pribadi</string>
    <string name="titleNama">Nama</string>
    <string name="titleNamaSedebar">Nama sidebaru</string>
    <string name="titleGender">Jenis Kelamin</string>
    <string name="titleEmail">Email</string>
    <string name="titleKeteranganAgunan">Keterangan Agunan</string>
    <string name="hintNama">contoh : Ani Surani</string>
    <string name="hintNoHp">contoh : 08xxxxx</string>
    <string name="hintKTP">contoh : 94585948694859491</string>
    <string name="hintEmail">contoh : surani@gmail.com</string>
    <string name="hintKeterangan">Merek/Tipe Kendaraan</string>
    <string name="hintPassword"><font size="16">Min 8 karakter(Terdapat huruf kapital dan angka)</font></string>
    <string name="buttonHitung">Hitung</string>
    <string name="buttonLanjut">Lanjut</string>
    <string name="buttonAjukan">Ajukan</string>
    <string name="Logout">Keluar</string>
    <string name="simulasiKredit">Simulasi Kredit</string>
    <string name="note"></string>
    <string-array name="agunan">
        <item>Pilih Agunan</item>
        <item>BPKB Mobil</item>
        <item>BPKB Motor</item>
    </string-array>
    <string-array name="gender_array">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="errorDanaMin">Dana minimal</string>
    <string name="errorDanaMinMobil">Pinjaman minimal </string>
    <string name="errorDanaMinMotor">Pinjaman minimal </string>
    <string name="errorOtrMin">OTR minimal Rp 50.000.000,-</string>
    <string name="errorNoAgunan">Harap memilih Agunan</string>
    <string name="errorNoDana">Harap mengisi Dana</string>
    <string name="errorNoUangMuka">Harap mengisi Uang Muka</string>
    <string name="errorDPKurang">Uang Muka minimal </string>
    <string name="errorDPOver">Uang Muka tidak boleh melebihi Harga</string>
    <string name="errorNoTahunKendaraan">Harap memilih Tahun Kendaraan</string>
    <string name="errorMaxTahunKendaraanMobil">Usia Tahun kendaraan tidak boleh lebih dari </string>
    <string name="errorMaxTahunKendaraanMotor">Usia Tahun kendaraan tidak boleh lebih dari </string>
    <string name="errorNoAreaTT">Harap Memilih Area Tempat Tinggal</string>
    <string name="errorNoKotaTerdekat">Harap Memilih Kota Terdekat</string>
    <string name="errorNoDataNama">Harap mengisi data Nama</string>
    <string name="errorMaxNama">Karakter terlalu panjang</string>
    <string name="errorNoDataNoHP">Harap mengisi data No Handphone</string>
    <string name="errorDataNoHP">Harap mengisi data No Handphone Dengan Benar</string>
    <string name="errorNoKTP">Harap mengisi data No KTP</string>
    <string name="errorKTP">KTP Tidak Sesuai</string>
    <string name="errorMaxNIK">NIK harus 16 angka</string>
    <string name="errorNoGender">Harap memilih Jenis Kelamin</string>
    <string name="errorNoEmail">Harap mengisi data Email</string>
    <string name="errorEmail">Harap mengisi data Email Dengan Benar</string>
    <string name="errorFormatEmail">Format Email tidak sesuai (contoh email@gmail.com)</string>
    <string name="errorNoKeterangan">Harap mengisi Keterangan</string>
    <string name="errorMaxKeterangan">Keterangan maksimal 50 karakter</string>
    <string name="errorNoHpDuplicate">Nomor Sudah Terdaftar</string>
    <string name="errorKetReferral">Harap isi Keterangan referal</string>
    <string name="errorNoReferral">Nomor Referal Terlalu Panjang</string>
    <string name="errorKetNumReferral">Keterangan Referal Terlalu Panjang</string>
    <string name="errorKetNoNumReferral">Harap isi Nomor Referal</string>
    <string name="errorNoNumReferralAB">Kode referral yang anda masukkan untuk sementara tidak bisa digunakan, mohon gunakan aplikasi smmf agency</string>
    <string name="errorNoNumReferralP">Kode referral salah/ tidak di-izinkan</string>
    <string name="errorPasswordNotMatch">Password tidak sesuai</string>
    <string name="erroroldpassword">Password lama anda salah</string>
    <string name="successchangepass">Password berhasil diubah.</string>
    <string name="successresetpass">Silahkan cek email konfirmasi reset password</string>
    <string name="asklogin">Mohon melakukan login terlebih dahulu.</string>
    <string name="successubmitppk">Request list ppk baru berhasil.</string>
    <string name="errorDataEmpty">Harap mengisi data dengan lengkap</string>
    <string name="errorNoInternetConnection">Cek koneksi internet atau wifi</string>
    <string name="errorConnection">Tidak terhubung dengan sistem. Silakan dicoba beberapa saat lagi.</string>
    <string name="errorBackend">Mohon Coba Kembali Beberapa Saat Kemudian. Terima Kasih.</string>
    <string name="errorIncompatibleVersion">Sudah tersedia versi lebih baru. Silakan perbarui aplikasi ini.</string>
    <string name="errorEmptyForm">Harap mengisi seluruh kolom pada form sebelum menyimpan.</string>
    <string name="errorEmpty">Tidak ada data</string>
    <string name="errorDownloadFailure">Unduh gagal. Silahkan coba lagi.</string>
    <string name="errorUploadFailure">Unggah gagal. Silahkan coba lagi.</string>
    <string name="errorEmptyCode">Harap memilih Status Panggilan dan Rincian Panggilan</string>
    <string name="errorEmptyPtp">Harap mengisi Tanggal Janji Bayar</string>
    <string name="errorDate">Tanggal Janji Bayar tidak boleh lebih kecil dari Tanggal Penanganan</string>
    <string name="errorEmptyHistory">Tidak ada data Riwayat Penanganan</string>
    <string name="errorJwtEmpty">ID pinjaman nasabah tidak ditemukan</string>
    <string name="errorJwtFail">Pengecekan gagal. Silahkan coba lagi.</string>
    <string name="errorRefreshData">Data Gagal Diperbaharui</string>
    <string name="imeinotmatch">Perangkat terdaftar pada pengguna lain silahkan hubungi callcenter kami di 08001588588</string>
    <string name="imeiusedbyother">Perangkat terdaftar pada pengguna lain silahkan hubungi callcenter kami di 08001588588</string>
    <string name="downloadData">Unduh data</string>
    <string name="downloadInProgress">Sedang diunduh</string>
    <string name="downloadCompleted">Unduh selesai</string>
    <string name="uploadInProgress">Sedang diunggah</string>
    <string name="uploadCompleted">Unggah selesai</string>
    <string name="loginCheck">Cek Login</string>
    <string name="addPin">Tentukan Pin</string>
    <string name="addPinInfo">Masukkan pin yang dikehendaki</string>
    <string name="addPinPin">Pin</string>
    <string name="addPinRepeat">Ulangi Pin</string>
    <string name="addPinRequired">Pin dan Ulangi Pin harus diisi</string>
    <string name="addPinSame">Pin dan Ulangi Pin harus sama</string>
    <string name="addPinNumber">Pin harus 4 angka</string>
    <string name="changePin">Ubah Pin</string>
    <string name="changePinInfo">Masukkan kata sandi dari Akun anda untuk melanjutkan</string>
    <string name="changePinPassword">Kata Sandi</string>
    <string name="changePinRequired">Kata Sandi harus diisi</string>
    <string name="changePinUnauthorized">Salah Kata Sandi</string>
    <string name="register">Registrasi</string>
    <string name="registerUsername">Nama Pengguna</string>
    <string name="registerPassword">Kata Sandi</string>
    <string name="registerInfo1">Masukkan nama pengguna serta kata sandi yang sesuai dengan akun MufInS</string>
    <string name="registerInfo2">Akun hanya dapat digunakan pada 1(satu) perangkat. Jika sudah pernah registrasi di perangkat lain, mohon keluar terlebih dahulu</string>
    <string name="registerRequired">Nama Pengguna dan Kata Sandi harus diisi</string>
    <string name="registerUnauthorized">Salah nomer Telepon atau Kata Sandi, atau Anda tidak memiliki Hak Akses</string>
    <string name="registerDuplicate">Anda masih terdaftar untuk perangkat seluler lain. Keluar dari perangkat sebelumnya untuk registrasi di perangkat ini. </string>
    <string name="registerInactive">Anda sudah tidak aktif.</string>
    <string name="unregister">Keluar</string>
    <string name="unregisterInfo">Apakah anda yakin keluar dari aplikasi ini?</string>
    <string name="retypePass">Ulangi kata sandi</string>
    <string name="incompleteregistration">Proses registrasi anda belum selesai, mohon tunggu e-mail aktivasi.</string>
    <string name="mailsuccess">Email berhasil dikirim !</string>
    <string name="mailmatch">Kode Sesuai !</string>
    <string name="mailnotmatch">Kode Tidak Sesuai !</string>
    <string name="phonenotfound">Anda Belum Terdaftar, silahkan melakukan registrasi</string>
    <string name="memberqueued">Data Anda sedang di verifikasi. Mohon menunggu untuk mendapatkan Kode Agent Referal.</string>
    <string name="noPPK">Harap isi Nomor PPK !</string>
    <string name="nonomorrek">Harap isi Nomor Rekening !</string>
    <string name="tanpamodal">TANPA SYARAT &amp; TANPA MODAL</string>
    <string name="bonustahunan">BONUS TAHUNAN &amp; UMROH</string>
    <string name="buatPassword">Anda Belum memiliki password, Mohon melengkapi data.</string>
    <string name="gantipass">Ganti Password</string>
    <string name="newpass">Kata Sandi Baru</string>
    <string name="retypeNewPass">Ulangi kata sandi baru</string>
    <string name="headerInfo1"> Cara Pembayaran Angusuran </string>
    <string name="headerInfo2"> Persyaratan Pengambilan BPKB </string>
    <string name="caraPembayaranDesc"> "Pembayaran angsuran kredit di SMMF dapat melalui:
        \n1. Melalui Cabang SMMF terdekat.
        \n2. Melalui Online Payment:
        \n\u0009\u0009- Melalui Autodebet Bank Sinar Mas.
        \n\u0009\u0009- Virtual Account
        \n\u0009\u0009- Transfer Bank Sinar Mas
        \n\n3. Melalui Merchant Duitku*</string>
    <string name="persyaratanAmbilBpkbDesc">Dokumen persyaratan pengambilan BPKB untuk Debitur:
        \n\n- Kwitansi asli pembayaran terakhir/Bukti  pe-
    lunasan.
        \n- Identitas asli yang masih berlaku (KTP/SIM)
    </string>
    <string name="infoTitle1">Kejar impian Anda untuk memiliki kendaraan idaman bersama Sinar Mas Multifinance
    </string>
    <string name="infoDesc1">Sinar Mas Multifinance menawarkan kemudahan bagi para nasabahnya untuk memiliki kendaraan baru ataupun bekas, berbagai merk, dengan persyaratan kredit yang mudah, bunga rendah dan sistem penyimpanan BPKB yang aman.
        \n\nSinar Mas Multifinance juga memiliki pilihan Kredit Kepemilikan dan bekerja sama dengan beberapa merchant untuk mempermudah pembayaran kredit.
    </string>
    <string name="infNote">Segera hubungi cabang terdekat di kotamu atau hubungi <b>SMMF Care</b> di 0 800 1 588 588 untuk informasi lebih lanjut.
    </string>
    <string name="oldPass">Password Lama</string>
</resources>