<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1.1"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1.9"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/infoTitle1" />
            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:lineSpacingExtra="5dp"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/infoDesc1"/>

            <TextView
                android:id="@+id/txtDesc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="15dp"
                android:textStyle="italic"
                android:text="@string/infNote" />
            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@drawable/styles_background"
                android:text="Close" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>