<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bckgroundEntryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/iv_backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txtViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_backbutton"
            android:gravity="center"
            android:singleLine="false"
            android:text="Ganti Password"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/create_post_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            android:src="@drawable/ic_add_laporan" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@+id/rl_titlebar"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/layoutRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/linearTop"
            android:layout_weight="3.4">

            <LinearLayout
                android:id="@+id/layerInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_konf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="18dp"
                        android:text="Konfirmasi perubahan password melalui E-mail ?"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_margin="10dp"
                        app:colorControlActivated="@color/red">


                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/titleEmail"
                            android:singleLine="true"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:visibility="gone"
                        android:id="@+id/input_layout_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_margin="10dp"
                        app:passwordToggleEnabled="true"
                        app:colorControlActivated="@color/red">

                        <EditText
                            android:id="@+id/etOldpass"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/oldPass"
                            android:singleLine="true"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black">

                        <EditText
                            android:id="@+id/etNewpass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/newpass"
                            android:textColorHint="@color/black"
                            android:textColor="@color/black"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:passwordToggleEnabled="true"
                        android:visibility="gone"
                        app:passwordToggleTint="@color/black">

                        <EditText
                            android:id="@+id/etNewpassconf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/retypeNewPass"
                            android:textColorHint="@color/black"
                            android:textColor="@color/black"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/layoutButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonSavePass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_orange_selector"
                            android:text="@string/gantipass"
                            android:textAllCaps="false"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </LinearLayout>



                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>